[gd_scene load_steps=5 format=3 uid="uid://cdg8sentuaw7r"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_2w1kl"]
[ext_resource type="Texture2D" uid="uid://cfgawbifsd4sy" path="res://Assets/Sprites/syri.png" id="2_3p66l"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ch7u"]
radius = 12.0907
height = 26.4243

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uifwh"]
radius = 2.70636
height = 27.0636

[node name="Player" type="CharacterBody2D" groups=["player"]]
visibility_layer = 10
position = Vector2(174, 555)
scale = Vector2(0.2, 0.2)
disable_mode = 2
collision_mask = 10
script = ExtResource("1_2w1kl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-48, -112)
scale = Vector2(3.09878, 3.57529)
texture = ExtResource("2_3p66l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-24, 16)
scale = Vector2(7.94, 26.6422)
shape = SubResource("CapsuleShape2D_2ch7u")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(-24, -624)

[node name="DmgBox" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(8, -56)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DmgBox"]
position = Vector2(-32, 72)
scale = Vector2(29.56, 26.36)
shape = SubResource("CapsuleShape2D_uifwh")
debug_color = Color(0.909582, 0.285584, 0.226237, 0.42)

[connection signal="hp_depleted" from="." to="." method="_on_hp_depleted"]
